--- a/style.css
+++ b/style.css
@@ -54,6 +54,42 @@ main {
   }
 }
 
+/* ページネーション */
+
+.pagination {
+  padding: 0 10px;
+}
+
+.pagination .page-numbers{
+  display:inline-block;
+  margin-right:20px;
+  padding:15px 20px;
+  color:#333;
+  border: 1px solid #999;
+  border-radius:3px;
+  background:#fff;
+  transition: transform 0.2s;
+}
+
+.pagination .page-numbers:not(.current):hover {
+  transform: scale(1.1);
+}
+
+.pagination .current{
+  padding:15px 20px;
+  background:#F2342B;
+  border: none;
+  color:#fff;
+}
+.pagination .prev,
+.pagination .next{
+  display: none;
+}
+.pagination .dots{
+  background:transparent;
+  box-shadow:none;
+}
+
 /*===================================================================
 header
 ==================================================================*/
@@ -228,6 +264,8 @@ main
   display: grid;
   grid-template-columns: 20% 80%;
   grid-template-rows: auto;
+  max-width: 1600px;
+  margin-inline: auto;
 }
 @media (min-width: 768px) and (max-width: 1200px) {
   .grid-container {
@@ -246,8 +284,6 @@ grid-main
 .grid-main {
   grid-column: 2/3;
   grid-row: 1/2;
-  max-width: 1400px;
-  margin-inline: auto;
 }
 
 .breadcrumb {
@@ -257,6 +293,8 @@ grid-main
 .main-container {
   padding: 60px;
   margin-bottom: 20px;
+  max-width: 1100px;
+  margin-inline: auto;
 }
 @media (max-width: 767px) {
   .main-container {
@@ -275,6 +313,8 @@ grid-main
 @media (max-width: 767px) {
   .main__section {
     margin-bottom: 50px;
+    max-width: 400px;
+    margin-inline: auto;
   }
 }
 
@@ -293,7 +333,6 @@ grid-main
 
 .section__items {
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
   margin-bottom: 60px;
 }
@@ -307,7 +346,6 @@ grid-main
 .section__item {
   padding: 10px;
   width: calc(50% - 20px);
-  max-width: 500px;
   margin-bottom: 20px;
 }
 .section__item:nth-child(even) {
@@ -321,8 +359,6 @@ grid-main
 @media (max-width: 767px) {
   .section__item {
     width: 100%;
-    max-width: 500px;
-    margin: 0 auto;
   }
 }
 
@@ -348,7 +384,7 @@ grid-main
 }
 @media (max-width: 767px) {
   .section__item--img {
-    height: auto;
+    height: 200px;
   }
 }
 .section__item--img img {
@@ -361,7 +397,7 @@ grid-main
   transition: transform 0.6s ease;
 }
 
-.category {
+.article-category {
   position: absolute;
   bottom: 10px;
   left: 10px;
@@ -370,10 +406,6 @@ grid-main
   padding: 4px 10px;
   border-radius: 4px;
   z-index: 1;
-  transition: transform 0.2s;
-}
-.category:hover {
-  transform: scale(1.1);
 }
 
 .section__item--title {
