--- a/style.css
+++ b/style.css
@@ -95,11 +95,17 @@ header
 ==================================================================*/
 header {
   height: 80px;
+  background-color: #fff;
 }
 @media (max-width: 767px) {
   header {
     height: 60px;
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.25);
   }
 }
 
@@ -202,8 +208,6 @@ header {
   border-bottom: 1px solid rgba(242, 52, 43, 0.4);
 }
 
-.drawer-brand {
-}
 .drawer-menu a::before {
   position: absolute;
   content: "";
@@ -215,26 +219,53 @@ header {
   background: url(img/folder-regular.svg) no-repeat center center;
   background-size: contain;
 }
-.drawer-brand::before {
-}
 .drawer-menu a:hover {
   padding-left: 24px;
-}
-.drawer-brand:hover {
 }
 
 /*===================================================================
 mv
 ==================================================================*/
 .mv {
-  background: url(img/mv.jpg) no-repeat center center;
-  background-size: cover;
   height: 500px;
   position: relative;
 }
 @media (max-width: 767px) {
   .mv {
     height: 250px;
+  }
+}
+.mv-top {
+  background: url(img/mv-top.jpg) no-repeat center center fixed;
+}
+@media (max-width: 767px) {
+  .mv-top {
+    background: url(img/mv-top.jpg) no-repeat 44% 0% fixed;
+    background-size: 200%;
+  }
+}
+.mv-article {
+  background: url(img/mv-article.jpg) no-repeat center center fixed;
+  background-size: cover;
+}
+.mv-practice {
+  background: url(img/mv-practice.jpg) no-repeat center center fixed;
+  background-size: cover;
+}
+@media (max-width: 767px) {
+  .mv-practice {
+    background: url(img/mv-practice.jpg) no-repeat 0% 0% fixed;
+    background-size: 200%;
+}
+}
+.mv-profile {
+  background: url(img/mv-profile.jpg) no-repeat center center fixed;
+  background-size: cover;
+}
+@media (max-width: 767px) {
+  .mv-profile {
+    background: url(img/mv-profile.jpg) no-repeat 56% 0% fixed;
+    background-size: 200%;
   }
 }
 .mv::before {
@@ -245,7 +276,7 @@ mv
   width: 100%;
   height: 100%;
   background: #000;
-  opacity: 0.5;
+  opacity: 0.4;
   z-index: 1;
 }
 
@@ -335,7 +366,7 @@ grid-main
 }
 @media (max-width: 767px) {
   .section__heading {
-    font-size: 32px;
+    font-size: 24px;
     margin-bottom: 20px;
   }
 }
@@ -428,10 +459,20 @@ grid-main
     font-size: 18px;
   }
 }
+@media (max-width: 767px) {
+  .section__item--title {
+    margin-bottom: 0;
+  }
+}
 
 .section__item--datetime {
   padding-left: 6px;
   margin-bottom: 6px;
+}
+@media (max-width: 767px) {
+  .section__item--datetime {
+    font-size: 12px;
+  }
 }
 
 /*======================================
@@ -487,7 +528,7 @@ grid-aside
   padding-left: 24px;
 }
 
-.aside__list--menu {
+.aside__list--menu, .sub-menu {
   padding-left: 20px;
 }
 .aside__list--menu li {
@@ -495,14 +536,17 @@ grid-aside
   padding-bottom: 4px;
   border-bottom: 1px solid rgba(242, 52, 43, 0.4);
 }
-.aside__list--menu li a {
+.sub-menu li {
+  padding-bottom: 4px;
+}
+.aside__list--menu li a, .sub-menu li a {
   display: block;
   cursor: pointer;
   transition: padding-left 0.2s;
   padding-left: 20px;
   position: relative;
 }
-.aside__list--menu li a::before {
+.aside__list--menu li a::before, .sub-menu li a::before {
   position: absolute;
   content: "";
   top: 50%;
@@ -513,7 +557,7 @@ grid-aside
   background: url(img/file-regular.svg) no-repeat center center;
   background-size: contain;
 }
-.aside__list--menu li a:hover {
+.aside__list--menu li a:hover, .sub-menu li a:hover {
   padding-left: 24px;
 }
 
@@ -621,44 +665,6 @@ footer {
 /*==========================================================================
 diaryページ
 ==========================================================================*/
-.diary__item {
-  width: calc(25% - 15px);
-}
-@media (min-width: 768px) and (max-width: 1200px) {
-  .diary__item {
-    width: calc(25% - 7.5px);
-  }
-}
-@media (max-width: 767px) {
-  .diary__item {
-    width: 100%;
-  }
-}
-.diary__item:nth-child(even) {
-  margin-left: 0;
-}
-.diary__item:not(:nth-child(4n+1)) {
-  margin-left: 20px;
-}
-@media (min-width: 768px) and (max-width: 1200px) {
-  .diary__item:not(:nth-child(4n+1)) {
-    margin-left: 10px;
-  }
-}
-@media (max-width: 767px) {
-  .diary__item:not(:nth-child(4n+1)) {
-    margin-inline: auto;
-  }
-}
-
-.diary-item__img {
-  height: 150px;
-}
-@media (max-width: 767px) {
-  .diary-item__img {
-    height: auto;
-  }
-}
 
 /*==========================================================================
 articleページ
