--- a/style.css
+++ b/style.css
@@ -413,7 +413,7 @@ grid-main
   border-radius: 8px;
 }
 .section__item--wrapper:hover .section__item--img {
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
 }
 .section__item--wrapper:hover img {
   transform: scale(1.1);
@@ -825,5 +825,53 @@ profileページ
 }
 
 .main__section p {
+  margin-bottom: 1.4em;
+  font-size: 17px;
+}
+
+.main__section h2 {
+  font-size: 36px;
+  margin-bottom: 1.4em;
+  margin-top: 1.4em;
+}
+
+.main__section h3 {
+  font-size: 28px;
+  margin-bottom: 1.4em;
+  margin-top: 1.4em;
+  border-bottom: 2px solid rgba(3,3, 3, 0.2);
+}
+
+.main__section h4 {
+  font-size: 23px;
+  margin-bottom: 1.4em;
+  margin-top: 1.4em;
+}
+
+.main__section  img {
+  width: 100%;
+  height: auto;
+  vertical-align: bottom;
+}
+
+.wp-block-table table {
+  margin-bottom: 0.2em;
+}
+
+.wp-block-table {
+  margin-bottom: 2em;
+}
+
+.wp-block-table figcaption {
+  margin-top: 0;
+  font-size: 14px;
+  text-align: center;
+}
+
+.wp-block-embed iframe {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+}
+
+.article-container img {
   margin-bottom: 1em;
 }
